--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <!-- 3 -->
         <ul class="social">
-            <li><a href="ganeshparjapt" class="fa fa-github"></a></li>
+            <li><a href="https://github.com/ganeshparjapt" class="fa fa-github">git</a></li>
             <li><a href="@ganeshexpert" class="fa fa-twitter"></a></li>
             <li><a href="#" class="fa fa-instagram"></a></li>
             <li><a href="#" class="fa fa-telegram"></a></li>
@@ -32,11 +32,11 @@
         </ul>
         <!-- 4 -->
         <div class="skills">
-            <h6>Skills</h6>
+            <h3>Skills</h3>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>SASS</li>
+               
                 <li>JavaScript</li>
                 <li>React</li>
                 <li>Github</li>
